--- a/src/views/template.jade
+++ b/src/views/template.jade
@@ -13,6 +13,9 @@ html(lang="en")
     script(src="js/angular.min.js", type="text/javascript")
     script(src="js/angular-route.min.js", type="text/javascript")
     script(src="js/ui-bootstrap-tpls.min.js", type="text/javascript")
+    script(src="js/modules.js", type="text/javascript")
+    script(src="js/helpers.js", type="text/javascript")
+    script(src="js/NavbarCtrl.js", type="text/javascript")
   body
     div.container(ng-app="EC2Manager")
       block content
