Starting to split login into a dedicated modal

--- a/src/views/includes/header.jade
+++ b/src/views/includes/header.jade
@@ -3,10 +3,10 @@ nav.navbar.navbar-default(ng-controller="NavbarCtrl")
     a.navbar-brand(href="/") EC2Manager
     div.navbar-nav.navbar-right
       button.btn.btn-primary.btn-lg(
-        ng-click="login()", ng-show="isLoggedIn()") Login
+        ng-click="showLoginModal()", ng-show="!isLoggedIn()") Login
       button.btn.btn-danger.btn-lg(
-        ng-click="logout()", ng-show="!isLoggedIn()") Logout
-include loginModal
+        ng-click="logoutClick()", ng-show="isLoggedIn()") Logout
+  include loginModal
 //- Create javascript to inject user information into the controller's scope
 if user !== undefined
   script(type="text/javascript").
