--- a/src/views/includes/loginModal.jade
+++ b/src/views/includes/loginModal.jade
@@ -3,7 +3,7 @@ script(type="text/ng-template", id="loginModal.html")
     h3.modal-title Login
   div.modal-body
     tabset
-      tab(heading="Login")
+      tab(heading="Login", ng-click="setTab('login')")
         .panel-body
           form#login-form.form-horizontal(role="form", novalidate)
             div.input-group
@@ -11,15 +11,14 @@ script(type="text/ng-template", id="loginModal.html")
                 i.glyphicon.glyphicon-user
               input.form-control(type="text", id="login-username",
                 name="login-username", placeholder="Username",
-                ng-model="login.user.username")
+                ng-model="login.username")
             div.input-group
               spn.input-group-addon
                 i.glyphicon.glyphicon-lock
               input.form-control(type="Password", id="login-password",
                 name="login-password", placeholder="Password",
-                ng-model="login.user.password")
-            button.btn.btn-primary.btn-lg(ng-click="loginClick()") Login
-      tab(heading="Signup")
+                ng-model="login.password")
+      tab(heading="Signup", ng-click="setTab('signup')")
         .panel-body
           form#signup-form.form-horizontal(role="form")
             div.input-group
@@ -28,19 +27,19 @@ script(type="text/ng-template", id="loginModal.html")
                 i.glyphicon.glyphicon-user
               input.form-control(type="text", id="signup-username",
                   name="signup-username", placeholder="Enter username",
-                  ng-model="signup.user.username")
+                  ng-model="signup.username")
             div.input-group
               span.input-group-addon
                 i.glyphicon.glyphicon-lock
               input.form-control(type="Password", id="signup-password",
                   placeholder="Enter password", name="signup-password",
-                  ng-model="signup.user.password")
+                  ng-model="signup.password")
             div.input-group
               span.input-group-addon
                 i.glyphicon.glyphicon-lock
               input.form-control(type="Password", id="passwordConfirm",
                   placeholder="Enter password")
-            button.btn.btn-primary.btn-lg(ng-click="signupClick()") Signup
   div.modal-footer
-    button.btn.btn-primary(ng-click="login()") Login
+    button.btn.btn-primary(ng-click="clickLoginSignup()", ng-show="tab === 'login'") Login
+    button.btn.btn-primary(ng-click="clickLoginSignup()", ng-show="tab === 'signup'") Signup
     button.btn.btn-default(ng-click="cancelModal()") Cancel
